--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="main-container">
     <header>
-      <h1>Game Collection</h1>
+      <h1>Multiple Game Collection</h1>
       <nav>
         <ul>
           <li><a href="#" id="memoryGameLink">Memory Game</a></li>
